--- a/BITLAB-war/web/validacion.xhtml
+++ b/BITLAB-war/web/validacion.xhtml
@@ -36,7 +36,7 @@
             <!-- Mensaje recibido del menejador -->
             <p:messages id="messagesAll" closable="true" showDetail="true" />
             <div class="login-logo">
-                <img src="resources/dist/img/BitlabLogo.png" width="150px" height="150px"></img>
+                <img src="resources/dist/img/BitlabLogo.png" class="rounded" width="150px" height="150px"></img>
                 <br/>
             </div>
             <!-- /.login-logo -->
