Adicion de Dashboard

--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -69,6 +69,7 @@
                                         width="30"
                                         style="border-radius: 50%;"
                                         />
+                                    <!--<p:graphicImage value="/images/#{fotoManaged.nombreFoto}" alt="User Image" styleClass="user-image" width="30" style="border-radius: 50%;" />-->
                                     <!--<span class="d-none d-md-inline">Alexander Pierce</span>-->
                                     <h:outputText value="#{usuarioManaged.nombre}" styleClass="d-none d-md-inline"/>
                                 </div>
@@ -83,6 +84,7 @@
                                             alt="User Avatar"
                                             class="img-size-50 mr-3 img-circle"
                                             />
+                                        <!--<p:graphicImage value="/images/#{fotoManaged.nombreFoto}" alt="User Avatar" styleClass="img-size-50 mr-3 img-circle" />-->
                                         <div class="media-body">
                                             <h3 class="dropdown-item-title">
                                                 <h:outputText value="#{usuarioManaged.nombre}" />
