--- a/BITLAB-war/web/index.xhtml
+++ b/BITLAB-war/web/index.xhtml
@@ -1,7 +1,10 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <body>
 
@@ -30,7 +33,7 @@
                             <div class="col-sm-6">
                                 <ol class="breadcrumb float-sm-right">
                                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                    <li class="breadcrumb-item active">Dashboard v1</li>
+                                    <li class="breadcrumb-item active">Dashboard</li>
                                 </ol>
                             </div>
                             <!-- /.col -->
@@ -44,90 +47,30 @@
                 <!-- Main content -->
                 <section class="content">
                     <div class="container-fluid">
-                        <!-- Small boxes (Stat box) -->
-                        <div class="row">
-                            <div class="col-lg-3 col-6">
-                                <!-- small box -->
-                                <div class="small-box bg-info">
-                                    <div class="inner">
-                                        <h3>150</h3>
-
-                                        <p>New Orders</p>
-                                    </div>
-                                    <div class="icon">
-                                        <i class="ion ion-bag"></i>
-                                    </div>
-                                    <a href="#" class="small-box-footer"
-                                       >More info <i class="fas fa-arrow-circle-right"></i
-                                        ></a>
-                                </div>
-                            </div>
-                            <!-- ./col -->
-                            <div class="col-lg-3 col-6">
-                                <!-- small box -->
-                                <div class="small-box bg-success">
-                                    <div class="inner">
-                                        <h3>53<sup style="font-size: 20px;">%</sup></h3>
-
-                                        <p>Bounce Rate</p>
-                                    </div>
-                                    <div class="icon">
-                                        <i class="ion ion-stats-bars"></i>
-                                    </div>
-                                    <a href="#" class="small-box-footer"
-                                       >More info <i class="fas fa-arrow-circle-right"></i
-                                        ></a>
-                                </div>
-                            </div>
-                            <!-- ./col -->
-                            <div class="col-lg-3 col-6">
-                                <!-- small box -->
-                                <div class="small-box bg-warning">
-                                    <div class="inner">
-                                        <h3>44</h3>
-
-                                        <p>User Registrations</p>
-                                    </div>
-                                    <div class="icon">
-                                        <i class="ion ion-person-add"></i>
-                                    </div>
-                                    <a href="#" class="small-box-footer"
-                                       >More info <i class="fas fa-arrow-circle-right"></i
-                                        ></a>
-                                </div>
-                            </div>
-                            <!-- ./col -->
-                            <div class="col-lg-3 col-6">
-                                <!-- small box -->
-                                <div class="small-box bg-danger">
-                                    <div class="inner">
-                                        <h3>65</h3>
-
-                                        <p>Unique Visitors</p>
-                                    </div>
-                                    <div class="icon">
-                                        <i class="ion ion-pie-graph"></i>
-                                    </div>
-                                    <a href="#" class="small-box-footer"
-                                       >More info <i class="fas fa-arrow-circle-right"></i
-                                        ></a>
-                                </div>
-                            </div>
-                            <!-- ./col -->
-                        </div>
-                        <!-- /.row -->
                         <!-- Main row -->
                         <div class="row">
-                            <!-- Left col -->
-                            <section class="col-lg-7 connectedSortable">
-                                <!-- Custom tabs (Charts with tabs)-->
-                                <p> Testing </p>
-                                <!-- /.card -->
-                            </section>
-                            <!-- /.Left col -->
-                            <!-- right col (We are only adding the ID to make the widgets sortable)-->
-                            <section class="col-lg-5 connectedSortable"></section>
-                            <!-- right col -->
+                            <ui:fragment rendered="#{usuarioManaged.rol eq 'Administrador' || usuarioManaged.rol eq 'Supervisor' }">
+                                <section class="col-lg-12">
+                                    <h:form>
+                                        <h3 style="text-align: center">Usuarios</h3>
+                                        <p:donutChart model="#{indexManaged.donutModel}" style="width: 100%; height: 400px;">
+                                            <p:ajax event="itemSelect" listener="#{indexManaged.itemSelectUsr}"/>
+                                        </p:donutChart>
+                                        <br/>
+                                        <br/>
+                                    </h:form>
+                                </section>
+                                <section class="col-lg-12">
+                                    <h:form>
+                                        <h3 style="text-align: center">Candidatos</h3>
+                                        <p:polarAreaChart model="#{indexManaged.polarAreaModel}" style="width: 100%; height: 400px;">
+                                            <p:ajax event="itemSelect" listener="#{indexManaged.itemSelectCan}"/>
+                                        </p:polarAreaChart>
+                                        <br/>
+                                        <br/>
+                                    </h:form>
+                                </section>
+                            </ui:fragment>
                         </div>
                         <!-- /.row (main row) -->
                     </div>
