--- a/BITLAB-war/web/ocupacion.xhtml
+++ b/BITLAB-war/web/ocupacion.xhtml
@@ -100,7 +100,7 @@
                             </h:form>
 
                             <h:form id="modi">
-                                <p:dialog header="Modificar idioma" widgetVar="ocuModi" showEffect="fade" hideEffect="fade" position="center" resizable="false" modal="true">
+                                <p:dialog header="Modificar ocupación" widgetVar="ocuModi" showEffect="fade" hideEffect="fade" position="center" resizable="false" modal="true">
                                     <p:panelGrid  columns="2">
                                         <p:outputLabel value="ID"/>
                                         <p:outputLabel value="#{ocupacionesManaged.ocupacion.ocuId}"/>    
