--- a/BITLAB-war/web/profile.xhtml
+++ b/BITLAB-war/web/profile.xhtml
@@ -55,8 +55,8 @@
                                             <div class="row">
                                                 <div class="col-xl-4" style="background-color: #333">
                                                     <div class="form-group" style="text-align: center; padding: 0">
-                                                        <!--<p:graphicImage name="dist/img/user2-160x160.jpg" alt="" width="250" style="padding: 5%"/>-->
-                                                        <p:graphicImage value="/images/#{fotoManaged.nombreFoto}" alt="" style="padding: 5%;width: 250px; height:250px; object-fit: cover"/>
+                                                        <p:graphicImage name="dist/img/user2-160x160.jpg" alt="" width="250" style="padding: 5%"/>
+                                                        <!--<p:graphicImage value="/images/#{fotoManaged.nombreFoto}" alt="" style="padding: 5%;width: 250px; height:250px; object-fit: cover"/>-->
                                                     </div>
                                                 </div>
                                                 <div class="col-xl-8" style="background-color: #fff">
@@ -75,7 +75,7 @@
                                         </div>
                                     </div>
                                 </h:form>
-                                <ui:fragment>
+                                <ui:fragment rendered="#{usuarioManaged.rol eq 'Candidato'}">
                                     <h:form role="form" id="progressbar">
                                         <div class="card card-primary" style="margin: 0 10% 30px 10%"> 
                                             <h3 style="padding: 10px 0 10px 20px; font-size: 20px"><b><h:outputText value="#{perfilManaged.estadoAplicacion.eapNombre}" /></b></h3>
@@ -226,7 +226,7 @@
                                 <!-- /.card -->
 
                                 <!--Form General-->
-                                <ui:fragment>
+                                <ui:fragment rendered="#{usuarioManaged.rol eq 'Candidato'}">
                                     <h:form role="form" id="complement">
                                         <div class="card card-primary" style="margin: 0 10% 30px 10%;">
                                             <div class="card-header" style="background-color: #6f42c1">
