--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -172,8 +172,8 @@
                                 <ui:fragment rendered="#{usuarioManaged.rol eq 'Candidato'}">
                                     <ui:insert name="crud-menu">
                                         <li class="nav-item">
-                                            <a href="crud.bitlab" class="nav-link">
-                                                <i class="fas fa-table nav-icon"></i>
+                                            <a href="cursos-disponibles.bitlab" class="nav-link">
+                                                <i class="fas fa-laptop-code nav-icon"></i>
                                                 <p>Cursos Disponibles</p>
                                             </a>
                                         </li>
