--- a/BITLAB-war/web/template.xhtml
+++ b/BITLAB-war/web/template.xhtml
@@ -101,7 +101,7 @@
                                     <i class="fas fa-user mr-2"></i>
                                     Perfil
                                 </h:outputLink>
-                                <h:outputLink value="resources/dist/Mundo.pdf" target="_blank" styleClass="dropdown-item float-right" >
+                                <h:outputLink value="resources/dist/bitlab.pdf" target="_blank" styleClass="dropdown-item float-right" >
                                     <i class="fas fa-book mr-2"> </i>
                                     Ayuda
                                 </h:outputLink>
