--- a/BITLAB-war/web/sexo.xhtml
+++ b/BITLAB-war/web/sexo.xhtml
@@ -102,7 +102,7 @@
                             </h:form>
 
                             <h:form id="modi">
-                                <p:dialog header="Modificar idioma" widgetVar="sexModi" showEffect="fade" hideEffect="fade" position="center" resizable="false" modal="true">
+                                <p:dialog header="Modificar sexo" widgetVar="sexModi" showEffect="fade" hideEffect="fade" position="center" resizable="false" modal="true">
                                     <p:panelGrid  columns="2">
                                         <p:outputLabel value="ID"/>
                                         <p:outputLabel value="#{sexoManaged.sexo.sexId}"/>    
